[package]
name = "wffle"
version = "0.0.0"
edition = "2021"
resolver = "2"

[dependencies]
bytemuck = { version = "1.13", features = [ "derive" ] }
egui-wgpu = { version = "^0.22", features = ["winit"] }
cint = "0.3.1"
hashbrown = "0.14"
mint = "0.5.9"
pollster = "0.3"
winit = { version = "0.28", features = [ "mint" ] }
egui-winit = "^0.22"
egui = { version = "^0.22", features = [ "cint", "mint", "extra_debug_asserts" ] }

[dependencies.wgpu]
version = "^0.16"
features = ["trace", "webgl"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
